[project]
name = "cst_utils"
version = "0.0.1"
description = "CST Utils."
readme = "README.md"
authors = [{ name = "aigcst", email = "aigcst@outlook.com" }]
requires-python = ">=3.11"
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/aigcst/cst-utils"


