[project]
name = "cst-utils"
version = "0.0.2"
description = "CST Utils."
readme = "README.md"
authors = [{ name = "aigcst", email = "aigcst@outlook.com" }]
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.44",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.urls]
Homepage = "https://github.com/aigcst/cst-utils"



[tool.ruff]
indent-width = 4  # tab每次缩进所用的空格数
line-length = 120 # 最大行长度
# select = ["C", "E", "F", "W"]                                     # 启用的规则集
# ignore = ["E203", "F401", "W291", "W292", "W605", "E731", "E402"] # 忽略的规则
# extend-select = ["I"]                                             # 扩展的规则集（例如 I 表示启用isort规则）
# # 排除常见忽略目录
# exclude = [".git", ".venv", "__pypackages__", "build", "dist", "node_modules"]

# # indent-width = 4
# # target-version = "py312" # 默认Python 3.12

[tool.ruff.lint]
# 默认启用的规则集
select = ["E4", "E7", "E9", "F"] # 基础pycodestyle和Pyflakes规则
# select = ["F", "E", "W", "UP", "I"] # 选择的规则
ignore = ["F401", "UP031"] # 忽略的规则
fixable = ["ALL"]          # 所有规则都可自动修复
unfixable = []

# # 允许下划线前缀的未使用变量
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# # 格式化风格（与Black兼容）
quote-style = "single"           #字符使用单引号
indent-style = "space"           #是否使用空格或制表符进行缩进，制表符-tab、空格space
docstring-code-format = true     #是否在注释中格式化代码片段
# skip-magic-trailing-comma = true #使用现有的尾随逗号作为短行应保持独立的指示
line-ending = "auto"             #行尾使用的字符
# docstring-code-format = false     # 默认不格式化文档字符串中的代码示例

[tool.lint.isort]
lines-after-imports = 1 #在导入后插入的空行数
no-sections = true      #用于控制导入语句的分组方式，true导入不分组
